--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,5 @@ services:
     ports:
       - 8000:8000
     image: app:recipe_api
-    container_name: recipe_api
-    command: >
-      sh -c "cd recipe_api &&
-            python3 manage.py runserver 0.0.0.0:8000"
+    container_name: recipe_api_container
+    command: python manage.py runserver 0.0.0.0:8000
